--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js",
-    "scrape": "curl http://localhost:3000/movies",
-    "fetch-links": "curl http://localhost:3000/fetch-links",
-    "full-process": "npm run scrape && sleep 5 && npm run fetch-links"
+    "dev": "NODE_ENV=development node server.js",
+    "prod": "NODE_ENV=production node server.js",
+    "scrape": "curl http://localhost:3002/api/v1/movies",
+    "fetch-links": "curl http://localhost:3002/api/v1/fetch-links",
+    "process-all": "curl http://localhost:3002/api/v1/process-all",
+    "health": "curl http://localhost:3002/health",
+    "deploy": "bash deploy-vps.sh",
+    "setup-cron": "bash setup-cron.sh",
+    "monitor": "bash monitor.sh",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +27,9 @@
   "dependencies": {
     "axios": "^1.11.0",
     "cheerio": "^1.1.2",
+    "cli-progress": "^3.12.0",
+    "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "fs-extra": "^11.3.1",
