--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "deploy": "bash deploy-vps.sh",
     "setup-cron": "bash setup-cron.sh",
     "monitor": "bash monitor.sh",
-    "test": "echo \"No tests specified\" && exit 0"
+    "test": "echo \"No tests specified\" && exit 0",
+    "test-archive": "node test-archive.js"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
     "@types/node": "^24.2.1"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.864.0",
     "axios": "^1.11.0",
     "cheerio": "^1.1.2",
     "cli-progress": "^3.12.0",
